Regression: creases lost with two subsurf modifier #102772

Closed
opened 2022-11-25 22:24:56 +01:00 by viktor · 8 comments

System Information
Operating system: Debian GNU/Linux bookworm/sid
Graphics card: Amd Radeon rx 6500 xt

Blender Version
Broken: 3.4.0 Beta, master
Worked: 3.2, 3.3
Caused by a8a454287a

Short description of error
Subdivision modified lost creases attribute on edges.

Exact steps for others to reproduce the error

  1. Create simply cube mesh, make crease=1 for all edges (Shift+E).
  2. Add subdivide modified. It correct handle creases.
  3. Add second subdivide modifier. It work like no creases after first modifier.

untitled.blend

second subdivision is off second subdivision is on
sub_off.jpg sub_on.jpg
**System Information** Operating system: Debian GNU/Linux bookworm/sid Graphics card: Amd Radeon rx 6500 xt **Blender Version** Broken: 3.4.0 Beta, master Worked: 3.2, 3.3 Caused by a8a454287a **Short description of error** Subdivision modified lost creases attribute on edges. **Exact steps for others to reproduce the error** 1. Create simply cube mesh, make crease=1 for all edges (Shift+E). 2. Add subdivide modified. It correct handle creases. 3. Add second subdivide modifier. It work like no creases after first modifier. [untitled.blend](https://archive.blender.org/developer/F13969555/untitled.blend) | second subdivision is off | second subdivision is on | | -- | -- | | ![sub_off.jpg](https://archive.blender.org/developer/F13969550/sub_off.jpg) | ![sub_on.jpg](https://archive.blender.org/developer/F13969553/sub_on.jpg) |
Author

Added subscriber: @wayerr

Added subscriber: @wayerr
viktor changed title from Subdivision lost 'creases' to Subdivision loses 'creases' 2022-11-25 22:31:21 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can replicate the issue. I'll check

Hi, thanks for the report. Can replicate the issue. I'll check
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
Caused by a8a454287a @HooglyBoogly ^
Pratik Borhade changed title from Subdivision loses 'creases' to Regression: creases lost with two subsurf modifier 2022-11-26 13:45:04 +01:00
Hans Goudey self-assigned this 2022-11-26 15:23:45 +01:00

This issue was referenced by 745851e26b

This issue was referenced by 745851e26b9f30693a9d09ca95f0d734bbcd25bc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102772
No description provided.